GKE/cluster/app/release-cluster/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: boutique-ip
    networking.gke.io/managed-certificates: boutique-certificate
    networking.gke.io/v1beta1.FrontendConfig: frontend-frontend-config
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: cartservice
            port:
              number: 7070
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: productcatalogservice
            port:
              number: 3550
      - path: /checkout
        pathType: Prefix
        backend:
          service:
            name: checkoutservice
            port:
              number: 5050
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              number: 80
